--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sqlparser = { version = "0.4" }
+sqlparser = { version = "0.40.0" }
 anyhow = "1"
+opendal = { version = "0.42.0", default-features = false, features = ["services-fs"] }
+tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
