--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,6 @@ sqlparser = { version = "0.40.0" }
 anyhow = "1"
 opendal = { version = "0.42.0", default-features = false, features = ["services-fs"] }
 tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
+rand = { version = "0.8.5", features = [] }
+serde = { version = "1.0.199", features = ["derive"] }
+serde_json = "1.0.116"
