--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,4 @@ parse-display = "0.9.0"
 chrono = "0.4.34"
 thiserror = "1.0.57"
 datafusion = { version = "40.0.0", features = ["default"] }
+bytes = "1"
